--- a/package.json
+++ b/package.json
@@ -10,26 +10,33 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@tailwindcss/vite": "^4.1.16",
-		"react": "^19.1.1",
-		"react-dom": "^19.1.1",
-		"tailwindcss": "^4.1.16"
+		"@tailwindcss/vite": "^4.1.18",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.563.0",
+		"radix-ui": "^1.4.3",
+		"react": "^19.2.4",
+		"react-dom": "^19.2.4",
+		"tailwind-merge": "^3.4.0",
+		"tailwindcss": "^4.1.18"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.36.0",
-		"@types/node": "^24.6.0",
-		"@types/react": "^19.1.16",
-		"@types/react-dom": "^19.1.9",
-		"@vitejs/plugin-react-swc": "^4.1.0",
-		"eslint": "^9.36.0",
+		"@eslint/js": "^9.39.2",
+		"@types/node": "^24.10.13",
+		"@types/react": "^19.2.13",
+		"@types/react-dom": "^19.2.3",
+		"@vitejs/plugin-react-swc": "^4.2.3",
+		"eslint": "^9.39.2",
 		"eslint-plugin-react-hooks": "^5.2.0",
-		"eslint-plugin-react-refresh": "^0.4.22",
-		"globals": "^16.4.0",
-		"prettier": "^3.6.2",
-		"prettier-plugin-tailwindcss": "^0.7.1",
+		"eslint-plugin-react-refresh": "^0.4.26",
+		"globals": "^16.5.0",
+		"prettier": "^3.8.1",
+		"prettier-plugin-tailwindcss": "^0.7.2",
+		"shadcn": "^3.8.4",
+		"tw-animate-css": "^1.4.0",
 		"typescript": "~5.9.3",
-		"typescript-eslint": "^8.45.0",
-		"vite": "^7.1.7",
+		"typescript-eslint": "^8.55.0",
+		"vite": "^7.3.1",
 		"vite-tsconfig-paths": "^5.1.4"
 	}
 }
