--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -20,11 +20,7 @@
 		"noUnusedParameters": true,
 		"erasableSyntaxOnly": true,
 		"noFallthroughCasesInSwitch": true,
-		"noUncheckedSideEffectImports": true,
-		"paths": {
-			"~src/*": ["./src/*"],
-			"~/*": ["./*"]
-		}
+		"noUncheckedSideEffectImports": true
 	},
 	"include": ["vite.config.ts"]
 }
